add layer presentation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CaseStudy</string>
+    <string name="new_simulator">Simulator novamente</string>
 </resources>
